- Improved speed of text running around frames a bit
- quite some speed improvements in formatting
- fixes in formatting
- fixes and improvements in line caching for drawing
- KWString does now some more caching => faster

Reggie, 6.10.1999:
--------------
- More fixes in line cache => more flicker freeness

Reggie, 19.10.1999:
-----------------
- Improvements for tables, still more needed

Reggie, 26.10.1999:
-----------------
- When selection text with keyboard Key_Home/Key_End
  are working as expected
- Frame borders with a width > 1 are drawn correctly again
- Fixed some crashing code

Reggie, 30.10.1999:
-----------------
- KRestrictedLine -> QLineEdit + QValidator
- Improved cursor navigation inside tables

Reggie, 8.11.1999:
-----------------
- When setting text attributes of a selected text only the chaged attribute(s)
  is changed, not the whole current format. So, if you have e.g. some bold and
  some italic text selected and change the color, only the color is changed
  and _not_ the attributes too (this was the case until now...).

Reggie, 10.11.1999
-----------------
- Saving and loading embedded parts works now

Reggie, 14.11.1999:
-----------------
- Implemented a menu entry to create a template from the document

Reggie, 17.11.1999:
-----------------
- Fixes

Reggie, 20.11.1999:
-----------------
Started working on automatically removing empty pages at the end. It
already works somehow, but the code is not used at the moment, as
there are some annoying bugs.

Reggie, 21.11.1999:
-----------------
- Shortcuts CTRL+B, CTRL+U, CTRL+I for bold, italic, underline works

Reggie, 27.11.1999
-----------------
- Fixed getting initial focus
- Got rid of the hack which inserts a space if you open an empty documen
  (not needed anymore)

Reggie, 28.11.1999
-----------------
- Small fix for scrolling (new selection stuff is not comitted yet...)

Reggie, 9.12.1999:
----------------
- Got rid of a shortcut which was used 3 times :-) (ALT + C)